fix cursor pointer class overlap issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ body h1 h2 h3 h4 h5 h6 p {
   width: 0px;
 }
 
-.cursor-pointer {
+.slide .cursor-pointer {
   width: 95% !important;
   margin: auto !important;
 }
